by coming up with descriptive Pulse names for you.

Timestep drag&drop support. Individual timesteps can be dragged and dropped
to reorder them.

1.63
-----

Changes to Analog Input channel configuration. Note -- your old Atticus
settings will no longer correctly configure your analog inputs (if you
are using this feature).

Bugfix to Cicero occasionally failing to load old settings file (platform-
dependent).

Major changes to FPGA feature set, and how it interacts with software-timed
tasks:
  a) FPGA "Wait For Retrigger" words now support a wait timeout, after which
the sequence will continue to run even if a retrigger edge was never received.
  b) Wait for retrigger can now retrigger on positive or negative edge or value,
depending on user selectable flag for that word.
  c) A much more sophisticated way of sharing software clocks allows for software
timed tasks (ie GPIB, RFSG, RS232) to be synchronized to FPGA clock, even if there
are long retrigger waits. The software clock can also be broadcast over the network
to Cicero (to make the UI reflect any retrigger waits) and other Atticus servers
(to synchronize their software tasks to the FPGA as well).


1.64
-----

New feature: Cicero "always use network clock" checkbox.

New feature: FPGA retrigger debounce (accessible through Atticus device settings
for FPGA).

Bugfix: fixed unpredictable behaviour when combining looped timestep groups
with retrigger waits.

Rename "Wait-for-retrigger" to "Hold-then-retrigger" to better reflect its actual
behavior (the beginning of the hold word will be output, THEN the sequence will wait,
and THEN the sequence will continue running the rest of the word once a retrigger is received).

[rev6] Fix to major memory leaks which could cause Cicero to crash after prolonged
operation. (timestep editors, variable editors, and pulse editors were not being
properly disposed of. bugs introduced in version 1.61 and 1.62)