@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.269
+//     Runtime Version:4.0.30319.296
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -70,7 +70,7 @@ namespace DataStructures.Properties {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to July 5, 2012.
+        ///   Looks up a localized string similar to Jan 12, 2013.
         /// </summary>
         internal static string BuildDateString {
             get {
@@ -88,7 +88,7 @@ namespace DataStructures.Properties {
         }
         
         /// <summary>
-        ///   Looks up a localized string similar to rev6.
+        ///   Looks up a localized string similar to rev7.
         /// </summary>
         internal static string RevisionString {
             get {
