@@ -121,13 +121,13 @@
     <value>(c) 2008  Aviv Keshet  (MIT),  Free software under GNU General Public License.</value>
   </data>
   <data name="BuildDateString" xml:space="preserve">
-    <value>July 5, 2012</value>
+    <value>Jan 12, 2013</value>
   </data>
   <data name="ContribsString" xml:space="preserve">
     <value>Tony Kim (MIT), Ryan Olf (Berkeley), Emmanuel Mimoun (ENS Paris), Timur Rvachov (MIT)</value>
   </data>
   <data name="RevisionString" xml:space="preserve">
-    <value>rev6</value>
+    <value>rev7</value>
     <comment>[Optional] eg: rev2. Will be displayed in UI, but not tracked in serialized Sequence, Settings, or ServerSettings files.</comment>
   </data>
   <data name="VersionString" xml:space="preserve">
